--- a/src/css/pages/SurahStream.scss
+++ b/src/css/pages/SurahStream.scss
@@ -48,10 +48,6 @@
   }
 }
 
-.justify-end {
-  justify-content: flex-end !important;
-}
-
 .content.theme.en {
   ul.body.stream {
     li.ayah {
